# ros2

./: .gitignore  README.md
MaGusRobot/magus_py_pkg/: magus_robot_pub2.py  magus_robot_pub3.py  magus_robot_sub1.py  magus_robot_sub2.py  magus_robot_sub3.py
MaGusRobot/magus_robot_bringup/: package.xml
MaGusRobot/magus_robot_bringup/launch/: magus_robot.launch.xml
Studies/magus_py_pkg/: magus_robot_pub1.py  magus_robot_sub1.py  magus_robot_sub2.py  magus_robot_sub3.py
Studies/magus_robot_bringup/: CMakeLists.txt
TemperatureCollector/temperature_collector/: client_campinas_node.py  client_santoandre_node.py  client_saopaulo_node.py  temp_collector_node.py  temp_server_node.py
TemperatureCollector/temperature_collector_bringup/: CMakeLists.txt  package.xml
TemperatureCollector/temperature_collector_bringup/config/: temperature_config.yaml
TemperatureCollector/temperature_collector_bringup/launch/: temperature_collector.launch.xml
TemperatureCollector/temperature_collector_interfaces/: CMakeLists.txt  package.xml
TemperatureCollector/temperature_collector_interfaces/msg/: TemperatureCollector.msg
urdf/: my_robot.urdf
urdf/my_robot_magus_description/: CMakeLists.txt  package.xml
urdf/my_robot_magus_description/launch/: display.launch.py  display.launch.xml
urdf/my_robot_magus_description/urdf/: my_robot_magus.urdf
